<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="txt_titleQuestion">Вопрос:</string>
    <string name="txt_numQuestion">2/10</string>
    <string name="act_main_btn_search_name">Поиск</string>
    <string name="act_main_btn_media_library_name">Медиатека</string>
    <string name="act_main_btn_settings_name">Настройки</string>
    <string name="act_set_txt_back">Назад</string>
    <string name="act_set_theme_dark">Темная тема</string>
    <string name="act_set_app_share">Поделиться приложением</string>
    <string name="act_set_write_support">Написать в поддержку</string>
    <string name="act_set_user_agree">Пользовательское соглашение</string>
</resources>