<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/act_main_color_bg"
    android:orientation="vertical"
    android:paddingTop="14dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/act_main_size_head_txt" />
    </FrameLayout>

    <Button
        android:id="@+id/amBtnFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/act_main_btn_margin_left_right"
        android:layout_marginTop="40dp"
        android:layout_marginRight="@dimen/act_main_btn_margin_left_right"
        android:layout_weight="1"
        android:backgroundTint="@color/act_main_color_btn_bg"
        android:text="@string/act_main_btn_search_name"
        android:textColor="@color/act_main_color_btn_caption"
        app:cornerRadius="@dimen/act_main_btn_corner_radius"
        app:icon="@drawable/ico_find_svg"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/amBtnMedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/act_main_btn_margin_left_right"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/act_main_btn_margin_left_right"
        android:layout_weight="1"
        android:backgroundTint="@color/act_main_color_btn_bg"
        android:text="@string/act_main_btn_media_library_name"
        android:textColor="@color/act_main_color_btn_caption"
        app:cornerRadius="@dimen/act_main_btn_corner_radius"
        app:icon="@drawable/ico_media"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/amBtnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/act_main_btn_margin_left_right"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/act_main_btn_margin_left_right"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/act_main_color_btn_bg"
        android:text="@string/act_main_btn_settings_name"
        android:textColor="@color/act_main_color_btn_caption"
        app:cornerRadius="@dimen/act_main_btn_corner_radius"
        app:icon="@drawable/ico_settings"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black"
        tools:ignore="TextContrastCheck" />
</LinearLayout>